--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,13 @@
   --text-color: #fff;
 
   /* Main color of your brand */
-  --color-primary: #f213a4;
+  --color-primary: #73E79C
+
+
+
+
+
+  13a4;
 
   /* Secondary color of your brand */
   --color-secondary: #418dff;
